Updated MediaNet Adapter